js/js.translator/testData/incremental/invalidation/openClassWithInternalField/lib1/A.1.kt
abstract class A {
    internal var prop: Int = 1
    internal fun func(): Int = 1
}
